tests/bad/enum_method_with_same_name.ae
/// fail: Type already has a field with this name

enum Variable {
    Integer
    IntLiteral
    Float
    String
}

def Variable::Integer() {}
